Fix overlapping edges

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 .edge {
-    stroke: #ffffff;
+    stroke: none;
 }
 
 .edge-dash {
